# bang_file_copier

./: .gitignore  README.md  TODO.md  bang_copier_config.json  manual_test_checklist.md  produce_steps.md  pyproject.toml
src/: bang_copier.py
src/bang_file_copier/: __init__.py  __main__.py  cli.py  config.py  logging_utils.py  operations.py  ui.py
src/bang_file_copier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
