[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bang-file-copier"
version = "0.1.0"
description = "CLI tool to copy and rename files starting with ! to multiple destinations."
authors = [
    { name = "Emad Armoun", email = "emad.armoun@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich>=10.0",
    "pyfiglet>=0.8"
]

[project.scripts]
bang = "bang_file_copier:main"
